# sfml-test

./: CMakeLists.txt
src/: helpful.cpp  main.cpp  player.h  weapon.h
